<resources>
    <string name="app_name">Jerusalem News</string>

    <string name="credits" translatable="false">\u2022 <b>statistics on the emerging virus Covid19</b>
        \n\u2022 <b>Examination of the user to ensure that he is free from the disease</b>
        \n\u2022 <b>View stats directly on active cases</b>
        \n\u2022 <b>View prevention and safety measures provided by the World Health Organization</b>
        \n\u2022 <b>Some advice for users</b>
    </string>
    <string name="libs" translatable="false">\u2022 <b>Glide</b> for showing flag images.
        \n\u2022 <b>Eaze Graph</b> for showing Pie charts.
        \n\u2022 <b>Circle ImageView</b> for showing my pic xD lol.
    </string>
    <string name="version" translatable="false">v1.0</string>
    <string name="search">Search</string>
    <string name="country">Country</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="deceased">Deceased</string>
    <string name="last_update">Last update</string>
    <string name="state_data">State Data</string>
    <string name="world_data">World Data</string>
    <string name="total_tests">Total Tests</string>
    <string name="state">State</string>
    <string name="total_cases">Total Cases</string>
    <string name="loading">Loading...</string>
    <string name="test">Test</string>
    <string name="what_is_the_app">What is the app ?</string>
    <string name="confirmed">Confirmed</string>
    <string name="samples_tested">Samples tested</string>

</resources>